add argocd spellings to dictionary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,43 @@
 {
     "cSpell.words": [
-        "bitnami",
-        "jsonpath",
-        "kubectl",
-        "Kubernetes"
+      "apiextensions",
+      "appendonly",
+      "appproj",
+      "appproject",
+      "appprojects",
+      "appprojs",
+      "argocd",
+      "argoproj",
+      "automount",
+      "backoff",
+      "basehref",
+      "bitnami",
+      "casbin",
+      "configmaps",
+      "copyutil",
+      "dexconfig",
+      "dexidp",
+      "entrypoint",
+      "grpc",
+      "healthz",
+      "jsonnet",
+      "jsonpath",
+      "ksonnet",
+      "kubectl",
+      "Kubernetes",
+      "LOGFORMAT",
+      "LOGLEVEL",
+      "maxversion",
+      "minversion",
+      "OIDC",
+      "openAPIV3Schema",
+      "REDISDB",
+      "reposerver",
+      "rootpath",
+      "rundex",
+      "staticassets",
+      "subresources",
+      "templating",
+      "tlas"
     ]
 }
