use production application folder

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
       "casbin",
       "configmaps",
       "copyutil",
+      "crds",
       "dexconfig",
       "dexidp",
       "entrypoint",
@@ -27,6 +28,7 @@
       "ksonnet",
       "kubectl",
       "Kubernetes",
+      "Kustomization",
       "LOGFORMAT",
       "LOGLEVEL",
       "maxversion",
