add sealed secrets

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,7 @@
       "jsonnet",
       "jsonpath",
       "ksonnet",
+      "kube",
       "kubectl",
       "Kubernetes",
       "Kustomization",
@@ -35,14 +36,18 @@
       "minversion",
       "OIDC",
       "openAPIV3Schema",
+      "proxier",
       "REDISDB",
       "reposerver",
       "rootpath",
       "rundex",
+      "sealedsecret",
+      "sealedsecrets",
       "staticassets",
       "subresources",
       "templating",
       "tlas",
+      "unsealer",
       "upsert"
     ]
 }
