wip: use monitoring branch

--- a/production/sealed-secrets.yaml
+++ b/production/sealed-secrets.yaml
@@ -10,7 +10,7 @@ spec:
   source:
     path: sealed-secrets
     repoURL: https://github.com/kevinobee/test-argocd.git
-    targetRevision: HEAD
+    targetRevision: monitoring
   destination:
     server: https://kubernetes.default.svc
   syncPolicy:
